pkginclude_HEADERS = \
  LHAPDF.h \
  Version.h \
  Info.h \
  Config.h \
  PDFSet.h \
  PDFInfo.h \
  PDF.h \
  GridPDF.h \
  KnotArray.h \
  Utils.h \
  Paths.h \
  Exceptions.h \
  Factories.h \
  PDFIndex.h \
  Reweighting.h \
  Interpolator.h \
  BilinearInterpolator.h \
  BicubicInterpolator.h \
  LogBilinearInterpolator.h \
  LogBicubicInterpolator.h \
  Extrapolator.h \
  ErrExtrapolator.h \
  NearestPointExtrapolator.h \
  ContinuationExtrapolator.h \
  AlphaS.h

if ENABLE_LHAGLUE
  pkginclude_HEADERS += LHAGlue.h
endif
